--- a/My101Romance/appsettings.json
+++ b/My101Romance/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LOWPOLYANHEL\\SQLEXPRESS; Database=romance; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
