--- a/My101Romance/appsettings.json
+++ b/My101Romance/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=LOWPOLYANHEL\\SQLEXPRESS; Database=romance; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Project":
+  {
+    "ProjectName": "My101Romance",
+    "ContactPhone": "+38 (096) 111 11 11",
+    "ContactPhoneShort": "+380961111111",
+    "Email": "my101romance@gmail.com"
+  }
 }
