--- a/My101Romance/appsettings.json
+++ b/My101Romance/appsettings.json
@@ -1,17 +1,27 @@
 {
+  "ConnectionStrings": {
+  "DefaultConnection": "Server=LOWPOLYANHEL\\SQLEXPRESS; Database=romance; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
+},
+  "SocialLinks" : {
+    "Instagram" : "https://www.instagram.com/",
+    "Telegram" : "https://t.me/",
+    "Discord" : "https://discord.com/",
+    "Twitter" : "https://twitter.com/",
+    "Facebook" : "https://facebook.com",
+    "LinkedIn" : "https://linkedin.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=LOWPOLYANHEL\\SQLEXPRESS; Database=romance; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
-  },
+  
   "AllowedHosts": "*",
   "Project":
   {
     "ProjectName": "My101Romance",
+    "ProjectShortDesc": "інтерактивний рейтинг побачень",
     "ContactPhone": "+38 (096) 111 11 11",
     "ContactPhoneShort": "+380961111111",
     "Email": "my101romance@gmail.com"
